--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
             <img class="image" src="images/1.jpg" alt="image">
             <div class="dots-container"></div>
         </div>
+        <p class="info">This project is created by Utsav Dhakal.</p>
+        <div class="icons-container">
+            <a href="https://www.facebook.com/utdhakal/"><img class="icon" src="https://img.icons8.com/color/48/null/facebook-new.png"/></a>
+            <a href="https://www.instagram.com/utsavdhakall/"><img class="icon" src="https://img.icons8.com/color/48/null/instagram-new--v1.png"/></a>
+            <a href="https://twitter.com/utsavdhakall"><img class="icon" src="https://img.icons8.com/color/48/null/twitter--v1.png"/></a>
+            <a href="https://www.linkedin.com/in/utsavdhakal07/"><img class="icon" src="https://img.icons8.com/color/48/null/linkedin-circled--v1.png"/></a>
+            <a href="https://github.com/utsavdhakal"><img class="icon" src="https://img.icons8.com/ios-glyphs/30/null/github.png"/></a>
+            <a href="https://github.com/utsavdhakal/image-slider"><img class="icon" src="https://img.icons8.com/external-basicons-solid-edtgraphics/50/null/external-Source-code-files-basicons-solid-edtgraphics-3.png"/></a>
+        </div>
         <script src="slider.js"></script>
     </body>
 </html>
